--- a/service.html
+++ b/service.html
@@ -45,52 +45,37 @@
             </div>
           </div>
         </div>
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-12">
-              <div class="breadcrumbs-box">
-                <div class="kama_breadcrumbs"><span><a href="#"><span>Главная</span></a></span><span class="kb_sep">/</span><span><a href="#"><span>Услуги</span></a></span><span class="kb_sep">/</span><span class="kb_title">Авторская защита от угона</span></div>
+        <div class="conditions">
+          <div class="container-fluid">
+            <div class="conditions-promo">
+              <div class="row">
+                <div class="col-md-12">
+                  <h2 class="h2-title conditions-title h2-title__blue">РАСПИСАНИЕ И УСЛОВИЯ</h2>
+                  <p class="condition-paragraph">Рыбалка осуществляется круглосуточно. Просим соблюдать Вас правила<br> Организации рыбной ловли и отдыха на Водоёме д. Лыткино .«Три Пескаря». Разрешено использовать 2 снасти, не более 3х крючков на снасть.  Пойманная рыба весом свыше 3кг считается собственностью клуба «Три Пескаря» и отпускается в водоем<br> либо оплачивается из расчета 1кг – 300руб.</p>
+                </div>
               </div>
             </div>
-          </div>
-        </div>
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-11 offset-lg-1 col-md-12">
-              <div class="content-part inner-page">
-                <h1>Контакты</h1>
-                <div class="contacts-block">
-                  <div class="row">
-                    <div class="col-lg-4">
-                      <ul class="contacts-list">
-                        <li>
-                          <div class="contacts-block_li_left"><span class="icon-phone_contact"></span></div>
-                          <div class="contacts-block_li_right"><span>Телефон:</span><span class="cont-bold">+7 (3812) 34-12-00</span><span class="cont-bold">+7 (3812) 49-95-01</span></div>
-                        </li>
-                        <li>
-                          <div class="contacts-block_li_left"><span class="icon-mail"></span></div>
-                          <div class="contacts-block_li_right"><span>Email:</span><span class="cont-bold">info@alex-avto55.ru</span></div>
-                        </li>
-                        <li>
-                          <div class="contacts-block_li_left"><span class="icon-map_header"></span></div>
-                          <div class="contacts-block_li_right"><span>Адрес:</span><span class="cont-bold">г. Омск, ул. Учебная, 77, 1 этаж</span></div>
-                        </li>
-                        <li>
-                          <div class="contacts-block_li_left"><span class="icon-time"></span></div>
-                          <div class="contacts-block_li_right"><span>Время работы:</span><span class="cont-bold">пн - вс: 10:00-20:00 <br> без выходных</span></div>
-                        </li>
-                        <li>
-                          <div class="contacts-block_li_left"><span class="icon-car"></span></div>
-                          <div class="contacts-block_li_right"><span>Как проехать:</span><span class="cont-bold">Заезд с улицы Учебная <br> под шлагбаум на территорию</span></div>
-                        </li>
-                      </ul>
-                    </div>
-                    <div class="col-lg-7">
-                      <div class="contacts-page-map">
-                        <div id="mape"></div>
-                      </div>
-                    </div>
-                  </div>
+            <div class="conditions-price">
+              <div class="row conditions-price-row">
+                <div class="col-md-2 conditions-price_item">
+                  <div class="conditions-price_image"><img src="img/morning-icon.svg" alt="Утренняя путевка"></div><span class="conditions-price_title">1600 рублей<br>Утренняя путевка</span>
+                  <p class="conditions-price_time">6.00 – 13.00, без лимита любой рыбы.</p>
+                </div>
+                <div class="col-md-2 conditions-price_item conditions-price_item__bottom">
+                  <div class="conditions-price_image"><img src="img/afternoon-icon.svg" alt="Дневная путевка"></div><span class="conditions-price_title">2000 рублей<br>Дневная путевка</span>
+                  <p class="conditions-price_time">6.00 – 20.00, без лимита любой рыбы.</p>
+                </div>
+                <div class="col-md-2 conditions-price_item conditions-price_item__bottom">
+                  <div class="conditions-price_image"><img src="img/evening-icon.svg" alt="Вечерняя путевка"></div><span class="conditions-price_title">1600 рублей<br>Вечерняя путевка</span>
+                  <p class="conditions-price_time">13.00 – 20.00, без лимита любой рыбы.</p>
+                </div>
+                <div class="col-md-2 conditions-price_item conditions-price_item__bottom">
+                  <div class="conditions-price_image"><img src="img/night-icon.svg" alt="Ночная путевка"></div><span class="conditions-price_title">2000 рублей<br>Ночная путевка</span>
+                  <p class="conditions-price_time">20.00 – 5.00, без лимита любой рыбы.</p>
+                </div>
+                <div class="col-md-2 conditions-price_item">
+                  <div class="conditions-price_image"><img src="img/vip-icon.svg" alt="vip путевка"></div><span class="conditions-price_title">3500 рублей<br>VIP путевка</span>
+                  <p class="conditions-price_time">сутки с момента прибытия.</p>
                 </div>
               </div>
             </div>
