--- a/service.html
+++ b/service.html
@@ -51,7 +51,7 @@
               <div class="row">
                 <div class="col-md-12">
                   <h2 class="h2-title conditions-title h2-title__blue">РАСПИСАНИЕ И УСЛОВИЯ</h2>
-                  <p class="condition-paragraph">Рыбалка осуществляется круглосуточно. Просим соблюдать Вас правила<br> Организации рыбной ловли и отдыха на Водоёме д. Лыткино .«Три Пескаря». Разрешено использовать 2 снасти, не более 3х крючков на снасть.  Пойманная рыба весом свыше 3кг считается собственностью клуба «Три Пескаря» и отпускается в водоем<br> либо оплачивается из расчета 1кг – 300руб.</p>
+                  <p class="condition-paragraph">Рыбалка осуществляется круглосуточно. Просим соблюдать Вас правила<br> Организации рыбной ловли и отдыха на Водоёме д. Лыткино «Три Пескаря». Разрешено использовать 2 снасти, не более 3х крючков на снасть.  Пойманная рыба весом свыше 3кг считается собственностью клуба «Три Пескаря» и отпускается в водоем<br> либо оплачивается из расчета 1кг – 300руб.</p>
                 </div>
               </div>
             </div>
@@ -78,6 +78,98 @@
                   <p class="conditions-price_time">сутки с момента прибытия.</p>
                 </div>
               </div>
+            </div>
+          </div>
+        </div>
+        <div class="extra">
+          <div class="container-fluid">
+            <div class="row">
+              <div class="col-md-12">
+                <h2 class="h2-title extra-title h2-title__blue">ТАКЖЕ ДЛЯ ВАС</h2>
+              </div>
+            </div>
+            <div class="row extra-row">
+              <div class="col-md-2 extra_item"><span class="extra_item-title">500 рублей<br>Гостевая путевка</span>
+                <p class="extra_item-text">Без права лова, ночью<br> не действует. Оплату производит каждый<br> гость рыбака</p>
+              </div>
+              <div class="col-md-2 extra_item"><span class="extra_item-title">Бесплатно<br>Женщины и дети</span>
+                <p class="extra_item-text">Женщины и дети <br>до 14 лет включительно могут бесплатно рыбачить на снасти рыбака</p>
+              </div>
+              <div class="col-md-2 extra_item"><span class="extra_item-title">1000 рублей<br>Беседка</span>
+                <p class="extra_item-text">Женщины и дети <br>до 14 лет включительно могут бесплатно рыбачить на снасти рыбака</p>
+              </div>
+              <div class="col-md-2 extra_item"><span class="extra_item-title">300 рублей<br>Доп. снасть</span>
+                <p class="extra_item-text">Используются 2 снасти,<br> не более 3х крючков<br> на снасть. Дополнительная снасть оплачивается</p>
+              </div>
+              <div class="col-md-2 extra_item"><span class="extra_item-title">1000 рублей<br>VIP зона</span>
+                <p class="extra_item-text">с 7:00 до 17:00<br> испоьзуются две снасти<br> без нормы вылова<br> любой рыбы</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="vip-fish">
+          <div class="container-fluid">
+            <div class="row">
+              <div class="col-md-12">
+                <h2 class="h2-title vip-fish-title h2-title__white">VIP рыбалка<br>Вход 500 рублей</h2>
+                <div class="vip-fish-text">
+                  <p class="vip-fish-text_descr">Пойманная рыба оплачивается за 1кг:  Форель 500руб Карп 190руб, Амур 190руб, Осетр 700руб</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="rent">
+          <div class="container-fluid">
+            <div class="row">
+              <div class="col-md-12">
+                <h2 class="h2-title rent-title h2-title__blue">прокат снастей</h2>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-6">
+                <div class="rent-img"><img src="img/rent-img.svg" alt="Прокат снастей"></div>
+              </div>
+              <div class="col-md-6">
+                <div class="rent-staff">
+                  <div class="rent-staff_item"><span class="rent-staff_item__title">Удочка</span><span class="rent-staff_item__price">400 рублей</span><span class="rent-staff_item__info">(залог 1000 рублей)</span></div>
+                  <div class="rent-staff_item"><span class="rent-staff_item__title">Кресло</span><span class="rent-staff_item__price">200 рублей</span></div>
+                  <div class="rent-staff_item"><span class="rent-staff_item__title">Подсачник</span><span class="rent-staff_item__price">300 рублей</span></div>
+                  <div class="rent-staff_item"><span class="rent-staff_item__title">Ремонт снастей</span><span class="rent-staff_item__price">100 рублей</span></div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="offer">
+          <div class="container-fluid">
+            <div class="row">
+              <div class="col-md-6 offer-clean">
+                <h2 class="h2-title offer-title h2-title__white">Мы с радостью почистим и закоптим ваш улов</h2>
+                <p class="offer-text offer-text--clean">Чистка рыба и Копчение 1шт -200 рублей</p>
+              </div>
+              <div class="col-md-6 offer-houses">
+                <h2 class="h2-title offer-title offer-title--houses h2-title__white">На берегу водоёма находятся уютные домики</h2>
+                <p class="offer-text">Забронировать места можно по телефону: 8 (903) 799-31-41</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="current">
+          <div class="container-fluid">
+            <div class="row">
+              <div class="col-md-12">
+                <h2 class="h2-title current-title h2-title__white">В настоящее время водоем зарыблен следующими видами рыбы</h2>
+                <p class="current-text">Карп, весом до 8кг, Сазан, весом до 15кг, Сом, весом до 16кг Щука, весом до 5кг, Окунь, весом до 500г, Форель, весом до 3кг Осётр, весом до 13кг, Сиг, весом до 2кг, Стерлядь, весом до 1кг Линь, весом до 1.2кг, много крупного карася</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="rest">
+          <div class="container-fluid">
+            <div class="row">
+              <h2 class="h2-title rest-title h2-title__blue">База «Три Пескаря» организована<br> для отдыха, спортивного любительского рыболовства, а не для рыбного промысла</h2>
+              <p class="rest-text">За не выловленную рыбу компенсация не производится. Категорически запрещается:<br> разводить костры на берегу пруда, отпускать пойманную рыбу, ловить с лодок, ловля на резинку, телевизор и т.д.. Просьба во время рыбной ловли не шуметь, не мешать другим рыбакам, выбрасывать мусор в специально отведенные баки.. Автомобили паркуются строго<br> на выделенной стоянке.. Администрация оставляет за собой право<br> не допускать рыбаков на территорию «Три Пескаря»<br> без объяснения причин.</p>
             </div>
           </div>
         </div>
