--- a/service.html
+++ b/service.html
@@ -19,10 +19,10 @@
         <div class="header">
           <div class="container-fluid">
             <div class="row">
-              <div class="col-lg-3">
+              <div class="col-lg-1">
                 <div class="logo-box"><a href="/"><img src="img/logo.png"></a></div>
               </div>
-              <div class="col-lg-9">
+              <div class="col-lg-11">
                 <ul class="main-menu">
                   <li><a href="#">VIP рыбалка</a></li>
                   <li><a href="#">Услуги</a></li>
@@ -40,7 +40,7 @@
           <div class="container-fluid">
             <div class="row">
               <div class="col-lg-12">
-                <h1 class="header-block_h1">РЫБОЛОВНЫЙ КЛУБ <br> «ТРИ ПЕСКАРЯ» <br> В ЛЫТКИНО</h1>
+                <h1 class="header-block_h1">РЫБАЛКА<br>В ДЕРЕВНЕ ЛЫТКИНО<br>В КЛУБЕ «ТРИ ПЕСКАРЯ»</h1>
               </div>
             </div>
           </div>
@@ -51,7 +51,7 @@
               <div class="row">
                 <div class="col-md-12">
                   <h2 class="h2-title conditions-title h2-title__blue">РАСПИСАНИЕ И УСЛОВИЯ</h2>
-                  <p class="condition-paragraph">Рыбалка осуществляется круглосуточно. Просим соблюдать Вас правила<br> Организации рыбной ловли и отдыха на Водоёме д. Лыткино «Три Пескаря». Разрешено использовать 2 снасти, не более 3х крючков на снасть.  Пойманная рыба весом свыше 3кг считается собственностью клуба «Три Пескаря» и отпускается в водоем<br> либо оплачивается из расчета 1кг – 300руб.</p>
+                  <p class="condition-paragraph">Рыбалка осуществляется круглосуточно. Просим соблюдать Вас правила<br> Организации рыбной ловли и отдыха на Водоёме д. Лыткино «Три Пескаря». Разрешено использовать 2 снасти, не более 3х крючков на снасть.  Пойманная рыба весом свыше 3кг считается собственностью клуба «Три Пескаря» и отпускается в водоем либо оплачивается из расчета 1кг – 300руб.</p>
                 </div>
               </div>
             </div>
@@ -170,6 +170,19 @@
             <div class="row">
               <h2 class="h2-title rest-title h2-title__blue">База «Три Пескаря» организована<br> для отдыха, спортивного любительского рыболовства, а не для рыбного промысла</h2>
               <p class="rest-text">За не выловленную рыбу компенсация не производится. Категорически запрещается:<br> разводить костры на берегу пруда, отпускать пойманную рыбу, ловить с лодок, ловля на резинку, телевизор и т.д.. Просьба во время рыбной ловли не шуметь, не мешать другим рыбакам, выбрасывать мусор в специально отведенные баки.. Автомобили паркуются строго<br> на выделенной стоянке.. Администрация оставляет за собой право<br> не допускать рыбаков на территорию «Три Пескаря»<br> без объяснения причин.</p>
+            </div>
+          </div>
+        </div>
+        <div class="carousel-wrapper">
+          <div class="container-fluid">
+            <div class="row">
+              <div class="col-md-12">
+                <div class="owl-carousel owl-theme fish-slider">
+                  <div class="carousel-slide"><img src="img/carousel-slide.jpg" alt="Клуб Три пескаря"></div>
+                  <div class="carousel-slide"><img src="img/carousel-slide.jpg" alt="Клуб Три пескаря"></div>
+                  <div class="carousel-slide"><img src="img/carousel-slide.jpg" alt="Клуб Три пескаря"></div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
