--- a/index.html
+++ b/index.html
@@ -45,48 +45,64 @@
             </div>
           </div>
         </div>
+        <div class="features-block">
+          <div class="container-fluid">
+            <div class="row">
+              <div class="col-lg-12"><span class="features-block__title">Пруд в Лыткино</span>
+                <div class="features-block__description">Каждая минута рыбалки в Лыткино стоит того: тишина предрассветных <br> часов, запахи утреннего леса, плеск весел и размеренное покачивание лодки, ожидание, <br> пропитанное умиротворением окружающей природы… И радость первого улова, <br> ни с чем не сравнимое ощущение того, что твои усилия <br>стократно окупились сторицей. Пруд в Лыткино - это:</div>
+              </div>
+              <div class="col-lg-4">
+                <div class="feature-item">
+                  <div class="feature-item__imgbox"><img src="img/f1.png"></div>
+                  <div class="feature-item__title"><span>Чистый воздух</span></div>
+                  <div class="feature-item__desc">В близости водоема отсутствуют сельскохозяйственные поля и фермы. В некотором удалении от водоема (200м) расположена опушка леса</div>
+                </div>
+              </div>
+              <div class="col-lg-4">
+                <div class="feature-item">
+                  <div class="feature-item__imgbox"><img src="img/f2.png"></div>
+                  <div class="feature-item__title"><span>Ключевая вода</span></div>
+                  <div class="feature-item__desc">В южной части водоема много ключей, что улучшает качество воды и положительно сказывается на здоровье и качестве рыбы</div>
+                </div>
+              </div>
+              <div class="col-lg-4">
+                <div class="feature-item">
+                  <div class="feature-item__imgbox"><img src="img/f3.png"></div>
+                  <div class="feature-item__title"><span>Удивительные пейзажи</span></div>
+                  <div class="feature-item__desc">Водоем находится в живописной сельской местности, удаленной от городов, заводов и других промышленных комбинатов</div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="we-offer">
+          <div class="container-fluid">
+            <div class="row">
+              <div class="col-lg-12"><span class="we-offer__title">МЫ ПРЕДЛАГАЕМ</span>
+                <div class="we-offer__description">Каждая минута рыбалки в Лыткино стоит того: тишина предрассветных <br> часов, запахи утреннего леса, плеск весел и размеренное покачивание лодки, ожидание, <br>ропитанное умиротворением окружающей природы… И радость первого улова, <br> ни с чем не сравнимое ощущение того, что твои усилия <br> стократно окупились сторицей. Пруд в Лыткино - это:</div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="carousel-wrapper">
+          <div class="container-fluid">
+            <div class="row">
+              <div class="col-md-12">
+                <div class="owl-carousel owl-theme fish-slider">
+                  <div class="carousel-slide"><img src="img/carousel-slide.jpg" alt="Клуб Три пескаря"></div>
+                  <div class="carousel-slide"><img src="img/carousel-slide.jpg" alt="Клуб Три пескаря"></div>
+                  <div class="carousel-slide"><img src="img/carousel-slide.jpg" alt="Клуб Три пескаря"></div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
       <div class="footer">
         <div class="footer-top">
           <div class="container">
             <div class="row">
-              <div class="col-lg-3 col-md-6"><a href="/"><img class="footer-logo" src="img/footer_logo.png"></a>
-                <div class="copyright"><span>© 2014 — 2017 <br/> ООО «Алекс-Авто» <br/> Все права защищены.</span></div>
-              </div>
-              <div class="col-lg-3 col-md-6">
-                <ul class="footer-menu">
-                  <li><a href="#">Примеры работ</a></li>
-                  <li><a href="#">Цены</a></li>
-                  <li><a href="#">Предотвращенные угоны</a></li>
-                  <li><a href="#">Как мы работаем</a></li>
-                  <li><a href="#">О компании</a></li>
-                </ul>
-              </div>
-              <div class="col-lg-2 col-md-6">
-                <ul class="footer-menu">
-                  <li><a href="#">Новости</a></li>
-                  <li><a href="#">Вопрос-ответ</a></li>
-                  <li><a href="#">Статьи</a></li>
-                  <li><a href="#">Отзывы</a></li>
-                  <li><a href="#">Контакты</a></li>
-                </ul>
-              </div>
-              <div class="col-lg-4 col-md-6">
-                <ul class="footer-right">
-                  <li><a class="button" href="#consult" data-modal="modal">Записаться на консультацию</a></li>
-                  <li><a class="ask" href="#ask" data-modal="modal"><span class="icon-question"></span><span>Вопрос специалисту</span></a></li>
-                  <li><a class="callback" href="#order" data-modal="modal"> <span class="icon-phone"></span><span>Заказать звонок</span></a></li>
-                </ul>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="footer-bottom">
-          <div class="container">
-            <div class="row">
-              <div class="col-lg-12">
-                <p>Обращаем Ваше внимание на то, что данный интернет-сайт носит исключительно информационный характер и ни при каких условиях не является публичной офертой, определяемой положениями ч. 2 ст. 437 Гражданского кодекса Российской Федерации. Для получения подробной информации о стоимости, наименовании и сроках оказания услуг, пожалуйста, обращайтесь по контактным телефонам. Конкретный перечень услуг и порядок их предоставления определяется в договоре оказания услуг, оформляемым между компанией и клиентом</p>
-              </div>
+              <div class="col-lg-12"><span>facebook</span></div>
             </div>
           </div>
         </div>
