--- a/index.html
+++ b/index.html
@@ -84,6 +84,70 @@
             </div>
           </div>
         </div>
+        <div class="home-service">
+          <div class="container-fluid">
+            <div class="row">
+              <div class="col-lg-3">
+                <div class="service-item">
+                  <div class="service-item__imgbox"><img src="img/hs1.png"></div>
+                  <div class="service-item__title">Рыбалка <br> и VIP рыбалка</div>
+                </div>
+              </div>
+              <div class="col-lg-3">
+                <div class="service-item">
+                  <div class="service-item__imgbox"><img src="img/hs2.png"></div>
+                  <div class="service-item__title">Финно- <br> угорское копчение</div>
+                </div>
+              </div>
+              <div class="col-lg-3">
+                <div class="service-item">
+                  <div class="service-item__imgbox"><img src="img/hs3.png"></div>
+                  <div class="service-item__title">Прокат <br> снастей</div>
+                </div>
+              </div>
+              <div class="col-lg-3">
+                <div class="service-item">
+                  <div class="service-item__imgbox"><img src="img/hs4.png"></div>
+                  <div class="service-item__title">Уютные <br> домики на берегу</div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="home-articles">
+          <div class="container-fluid">
+            <div class="row">
+              <div class="col-lg-3">
+                <div class="article-item">
+                  <div class="article-item__date">04.07.2017</div>
+                  <div class="article-item__title">Lorem ipsum dolor sit amet</div>
+                  <div class="article-item__desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud</div><a class="article-item__more" href="#">ЧИТАТЬ ПОЛНОСТЬЮ</a>
+                </div>
+              </div>
+              <div class="col-lg-3">
+                <div class="article-item">
+                  <div class="article-item__date">04.07.2017</div>
+                  <div class="article-item__title">Lorem ipsum dolor sit amet</div>
+                  <div class="article-item__desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud</div><a class="article-item__more" href="#">ЧИТАТЬ ПОЛНОСТЬЮ</a>
+                </div>
+              </div>
+              <div class="col-lg-3">
+                <div class="article-item">
+                  <div class="article-item__date">04.07.2017</div>
+                  <div class="article-item__title">Lorem ipsum dolor sit amet</div>
+                  <div class="article-item__desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud</div><a class="article-item__more" href="#">ЧИТАТЬ ПОЛНОСТЬЮ</a>
+                </div>
+              </div>
+              <div class="col-lg-3">
+                <div class="article-item">
+                  <div class="article-item__date">04.07.2017</div>
+                  <div class="article-item__title">Lorem ipsum dolor sit amet</div>
+                  <div class="article-item__desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud</div><a class="article-item__more" href="#">ЧИТАТЬ ПОЛНОСТЬЮ</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
         <div class="carousel-wrapper">
           <div class="container-fluid">
             <div class="row">
