--- a/contacts.html
+++ b/contacts.html
@@ -36,108 +36,46 @@
             </div>
           </div>
         </div>
-        <div class="header-block">
+        <div class="map"></div>
+        <div class="contacts-block">
           <div class="container-fluid">
             <div class="row">
-              <div class="col-lg-12">
-                <h1 class="header-block_h1">РЫБОЛОВНЫЙ КЛУБ <br> «ТРИ ПЕСКАРЯ» <br> В ЛЫТКИНО</h1>
+              <div class="col-lg-8">
+                <div class="contacts-block__title">Пруд в Лыткино </div>
+                <div class="contacts-block__desc">Найти нас можно по адресу: Московская область, Солнечногорский район, Деревня Лыткино. <br> о водоема легко добраться как общественным транспортом, так и на машине. <br> Котактный телефон: 8-903-799-3141</div>
               </div>
             </div>
-          </div>
-        </div>
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-12">
-              <div class="breadcrumbs-box">
-                <div class="kama_breadcrumbs"><span><a href="#"><span>Главная</span></a></span><span class="kb_sep">/</span><span><a href="#"><span>Услуги</span></a></span><span class="kb_sep">/</span><span class="kb_title">Авторская защита от угона</span></div>
+            <div class="row justify-content-center">
+              <div class="col-lg-2"><img src="c1.png"></div>
+              <div class="col-lg-8">
+                <div class="contacts-block__subtitle">Общественный транспорт</div>
+                <div class="contacts-block__desc">
+                  Электропоездом Ленинградского направления до станции «Крюково» далее авт. №№ 403, 497 до ост. «деревня Лыткино».(время в пути от Крюково до Лыткино приблизительно 30 мин.) Интервал движения автобуса - около 1 часа. Остановка автобуса находится в 50 м. от водоема.
+                  Если добираться самым первым общественным транспортом, то первый электропоезд с Ленинградского вокзала отправляется в 04:42 утра и прибывает на ст. «Крюково» в 05:33.  Первый автобус (№ 497) отправляется от Крюково в 06:05 и прибывает в Лыткино в 06:36 утра.
+                  Расписание электричек Расписание автобуса
+                </div>
               </div>
             </div>
-          </div>
-        </div>
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-11 offset-lg-1 col-md-12">
-              <div class="content-part inner-page">
-                <h1>Контакты</h1>
-                <div class="contacts-block">
-                  <div class="row">
-                    <div class="col-lg-4">
-                      <ul class="contacts-list">
-                        <li>
-                          <div class="contacts-block_li_left"><span class="icon-phone_contact"></span></div>
-                          <div class="contacts-block_li_right"><span>Телефон:</span><span class="cont-bold">+7 (3812) 34-12-00</span><span class="cont-bold">+7 (3812) 49-95-01</span></div>
-                        </li>
-                        <li>
-                          <div class="contacts-block_li_left"><span class="icon-mail"></span></div>
-                          <div class="contacts-block_li_right"><span>Email:</span><span class="cont-bold">info@alex-avto55.ru</span></div>
-                        </li>
-                        <li>
-                          <div class="contacts-block_li_left"><span class="icon-map_header"></span></div>
-                          <div class="contacts-block_li_right"><span>Адрес:</span><span class="cont-bold">г. Омск, ул. Учебная, 77, 1 этаж</span></div>
-                        </li>
-                        <li>
-                          <div class="contacts-block_li_left"><span class="icon-time"></span></div>
-                          <div class="contacts-block_li_right"><span>Время работы:</span><span class="cont-bold">пн - вс: 10:00-20:00 <br> без выходных</span></div>
-                        </li>
-                        <li>
-                          <div class="contacts-block_li_left"><span class="icon-car"></span></div>
-                          <div class="contacts-block_li_right"><span>Как проехать:</span><span class="cont-bold">Заезд с улицы Учебная <br> под шлагбаум на территорию</span></div>
-                        </li>
-                      </ul>
-                    </div>
-                    <div class="col-lg-7">
-                      <div class="contacts-page-map">
-                        <div id="mape"></div>
-                      </div>
-                    </div>
-                  </div>
+            <div class="row justify-content-center">
+              <div class="col-lg-2"><img src="c2.png"></div>
+              <div class="col-lg-8">
+                <div class="contacts-block__subtitle">Общественный транспорт</div>
+                <div class="contacts-block__desc">
+                  Электропоездом Ленинградского направления до станции «Крюково» далее авт. №№ 403, 497 до ост. «деревня Лыткино».(время в пути от Крюково до Лыткино приблизительно 30 мин.) Интервал движения автобуса - около 1 часа. Остановка автобуса находится в 50 м. от водоема.
+                  Если добираться самым первым общественным транспортом, то первый электропоезд с Ленинградского вокзала отправляется в 04:42 утра и прибывает на ст. «Крюково» в 05:33.  Первый автобус (№ 497) отправляется от Крюково в 06:05 и прибывает в Лыткино в 06:36 утра.
+                  Расписание электричек Расписание автобуса
                 </div>
               </div>
             </div>
           </div>
         </div>
+        <div class="mappic"></div>
       </div>
       <div class="footer">
         <div class="footer-top">
           <div class="container">
             <div class="row">
-              <div class="col-lg-3 col-md-6"><a href="/"><img class="footer-logo" src="img/footer_logo.png"></a>
-                <div class="copyright"><span>© 2014 — 2017 <br/> ООО «Алекс-Авто» <br/> Все права защищены.</span></div>
-              </div>
-              <div class="col-lg-3 col-md-6">
-                <ul class="footer-menu">
-                  <li><a href="#">Примеры работ</a></li>
-                  <li><a href="#">Цены</a></li>
-                  <li><a href="#">Предотвращенные угоны</a></li>
-                  <li><a href="#">Как мы работаем</a></li>
-                  <li><a href="#">О компании</a></li>
-                </ul>
-              </div>
-              <div class="col-lg-2 col-md-6">
-                <ul class="footer-menu">
-                  <li><a href="#">Новости</a></li>
-                  <li><a href="#">Вопрос-ответ</a></li>
-                  <li><a href="#">Статьи</a></li>
-                  <li><a href="#">Отзывы</a></li>
-                  <li><a href="#">Контакты</a></li>
-                </ul>
-              </div>
-              <div class="col-lg-4 col-md-6">
-                <ul class="footer-right">
-                  <li><a class="button" href="#consult" data-modal="modal">Записаться на консультацию</a></li>
-                  <li><a class="ask" href="#ask" data-modal="modal"><span class="icon-question"></span><span>Вопрос специалисту</span></a></li>
-                  <li><a class="callback" href="#order" data-modal="modal"> <span class="icon-phone"></span><span>Заказать звонок</span></a></li>
-                </ul>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="footer-bottom">
-          <div class="container">
-            <div class="row">
-              <div class="col-lg-12">
-                <p>Обращаем Ваше внимание на то, что данный интернет-сайт носит исключительно информационный характер и ни при каких условиях не является публичной офертой, определяемой положениями ч. 2 ст. 437 Гражданского кодекса Российской Федерации. Для получения подробной информации о стоимости, наименовании и сроках оказания услуг, пожалуйста, обращайтесь по контактным телефонам. Конкретный перечень услуг и порядок их предоставления определяется в договоре оказания услуг, оформляемым между компанией и клиентом</p>
-              </div>
+              <div class="col-lg-12"><span>facebook</span></div>
             </div>
           </div>
         </div>
@@ -306,7 +244,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
         <script src="libs/fancybox/jquery.fancybox.js"></script>
         <script src="libs/owl.carousel/owl.carousel.js"></script>
-        <script src="https://api-maps.yandex.ru/2.1/?lang=tr_TR" type="text/javascript"></script>
+        <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
         <script src="js/common.js"></script>
       </div>
     </div>
