Добавил страницу Статьи

--- a/service.html
+++ b/service.html
@@ -16,7 +16,7 @@
   <body>
     <div class="wrapper">
       <div class="content">
-        <div class="header">
+        <div class="header service-header">
           <div class="container-fluid">
             <div class="row">
               <div class="col-lg-1">
@@ -36,11 +36,11 @@
             </div>
           </div>
         </div>
-        <div class="header-block">
+        <div class="service-header-block">
           <div class="container-fluid">
             <div class="row">
               <div class="col-lg-12">
-                <h1 class="header-block_h1">РЫБАЛКА<br>В ДЕРЕВНЕ ЛЫТКИНО<br>В КЛУБЕ «ТРИ ПЕСКАРЯ»</h1>
+                <h2 class="h2-title h2-title__white">РЫБАЛКА<br>В ДЕРЕВНЕ ЛЫТКИНО<br>В КЛУБЕ «ТРИ ПЕСКАРЯ»</h2>
               </div>
             </div>
           </div>
@@ -149,7 +149,7 @@
                 <p class="offer-text offer-text--clean">Чистка рыба и Копчение 1шт -200 рублей</p>
               </div>
               <div class="col-md-6 offer-houses">
-                <h2 class="h2-title offer-title offer-title--houses h2-title__white">На берегу водоёма находятся уютные домики</h2>
+                <h2 class="h2-title offer-title offer-title--houses h2-title__white">На берегу<br> водоёма находятся уютные домики</h2>
                 <p class="offer-text">Забронировать места можно по телефону: 8 (903) 799-31-41</p>
               </div>
             </div>
@@ -191,43 +191,7 @@
         <div class="footer-top">
           <div class="container">
             <div class="row">
-              <div class="col-lg-3 col-md-6"><a href="/"><img class="footer-logo" src="img/footer_logo.png"></a>
-                <div class="copyright"><span>© 2014 — 2017 <br/> ООО «Алекс-Авто» <br/> Все права защищены.</span></div>
-              </div>
-              <div class="col-lg-3 col-md-6">
-                <ul class="footer-menu">
-                  <li><a href="#">Примеры работ</a></li>
-                  <li><a href="#">Цены</a></li>
-                  <li><a href="#">Предотвращенные угоны</a></li>
-                  <li><a href="#">Как мы работаем</a></li>
-                  <li><a href="#">О компании</a></li>
-                </ul>
-              </div>
-              <div class="col-lg-2 col-md-6">
-                <ul class="footer-menu">
-                  <li><a href="#">Новости</a></li>
-                  <li><a href="#">Вопрос-ответ</a></li>
-                  <li><a href="#">Статьи</a></li>
-                  <li><a href="#">Отзывы</a></li>
-                  <li><a href="#">Контакты</a></li>
-                </ul>
-              </div>
-              <div class="col-lg-4 col-md-6">
-                <ul class="footer-right">
-                  <li><a class="button" href="#consult" data-modal="modal">Записаться на консультацию</a></li>
-                  <li><a class="ask" href="#ask" data-modal="modal"><span class="icon-question"></span><span>Вопрос специалисту</span></a></li>
-                  <li><a class="callback" href="#order" data-modal="modal"> <span class="icon-phone"></span><span>Заказать звонок</span></a></li>
-                </ul>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="footer-bottom">
-          <div class="container">
-            <div class="row">
-              <div class="col-lg-12">
-                <p>Обращаем Ваше внимание на то, что данный интернет-сайт носит исключительно информационный характер и ни при каких условиях не является публичной офертой, определяемой положениями ч. 2 ст. 437 Гражданского кодекса Российской Федерации. Для получения подробной информации о стоимости, наименовании и сроках оказания услуг, пожалуйста, обращайтесь по контактным телефонам. Конкретный перечень услуг и порядок их предоставления определяется в договоре оказания услуг, оформляемым между компанией и клиентом</p>
-              </div>
+              <div class="col-lg-12"><span>facebook</span></div>
             </div>
           </div>
         </div>
