--- a/articles.html
+++ b/articles.html
@@ -16,7 +16,7 @@
   <body>
     <div class="wrapper">
       <div class="content">
-        <div class="header">
+        <div class="header articles-header-margin">
           <div class="container-fluid">
             <div class="row">
               <div class="col-lg-1">
@@ -36,52 +36,106 @@
             </div>
           </div>
         </div>
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-12">
-              <div class="breadcrumbs-box">
-                <div class="kama_breadcrumbs"><span><a href="#"><span>Главная</span></a></span><span class="kb_sep">/</span><span><a href="#"><span>Услуги</span></a></span><span class="kb_sep">/</span><span class="kb_title">Авторская защита от угона</span></div>
+        <div class="articles-header-block">
+          <div class="container-fluid">
+            <div class="row">
+              <div class="col-lg-12">
+                <div class="articles-header">
+                  <h2 class="header-block_h1 articles-title">Lorem ipsum dolor sit<br> amet, consectetur adipiscing elit</h2>
+                  <p class="header-anounce">sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</p><a class="header-link articles-link" href="#article1" data-modal="modal">читать полностью</a>
+                </div>
               </div>
             </div>
           </div>
         </div>
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-11 offset-lg-1 col-md-12">
-              <div class="content-part inner-page">
-                <h1>Контакты</h1>
-                <div class="contacts-block">
-                  <div class="row">
-                    <div class="col-lg-4">
-                      <ul class="contacts-list">
-                        <li>
-                          <div class="contacts-block_li_left"><span class="icon-phone_contact"></span></div>
-                          <div class="contacts-block_li_right"><span>Телефон:</span><span class="cont-bold">+7 (3812) 34-12-00</span><span class="cont-bold">+7 (3812) 49-95-01</span></div>
-                        </li>
-                        <li>
-                          <div class="contacts-block_li_left"><span class="icon-mail"></span></div>
-                          <div class="contacts-block_li_right"><span>Email:</span><span class="cont-bold">info@alex-avto55.ru</span></div>
-                        </li>
-                        <li>
-                          <div class="contacts-block_li_left"><span class="icon-map_header"></span></div>
-                          <div class="contacts-block_li_right"><span>Адрес:</span><span class="cont-bold">г. Омск, ул. Учебная, 77, 1 этаж</span></div>
-                        </li>
-                        <li>
-                          <div class="contacts-block_li_left"><span class="icon-time"></span></div>
-                          <div class="contacts-block_li_right"><span>Время работы:</span><span class="cont-bold">пн - вс: 10:00-20:00 <br> без выходных</span></div>
-                        </li>
-                        <li>
-                          <div class="contacts-block_li_left"><span class="icon-car"></span></div>
-                          <div class="contacts-block_li_right"><span>Как проехать:</span><span class="cont-bold">Заезд с улицы Учебная <br> под шлагбаум на территорию</span></div>
-                        </li>
-                      </ul>
-                    </div>
-                    <div class="col-lg-7">
-                      <div class="contacts-page-map">
-                        <div id="mape"></div>
-                      </div>
-                    </div>
-                  </div>
+        <div class="article-second article-copy">
+          <div class="container-fluid">
+            <div class="row">
+              <div class="col-md-6">
+                <div class="article-second_left">
+                  <h2 class="header-block_h1 articles-title">Lorem ipsum dolor<br> sit amet, consectetur adipiscing elit</h2>
+                  <p class="header-anounce">sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim<br> veniam, quis nostrud exercitation</p><a class="header-link articles-link" href="#article2" data-modal="modal">читать полностью</a>
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="article-second_right"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="header-block articles-header-block article-third">
+          <div class="container-fluid">
+            <div class="row">
+              <div class="col-lg-12"></div>
+            </div>
+          </div>
+        </div>
+        <div class="article-fourth article-copy">
+          <div class="container-fluid">
+            <div class="row">
+              <div class="col-md-6">
+                <div class="article-second_left">
+                  <h2 class="header-block_h1 articles-title">Lorem ipsum dolor<br> sit amet, consectetur adipiscing elit</h2>
+                  <p class="header-anounce">sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim<br> veniam, quis nostrud exercitation</p><a class="header-link articles-link" href="#article3" data-modal="modal">читать полностью</a>
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="article-second_right"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="articles-more">
+          <div class="container-fluid">
+            <div class="row">
+              <div class="col-md-12"><a class="articles-more-btn" href="#">Загрузить еще статьи</a></div>
+            </div>
+          </div>
+        </div>
+        <div class="modal" id="article1">
+          <div class="modal-wrapper">
+            <div class="modal-img"><img src="img/modal-bg.jpg" alt="Три карася"></div>
+            <div class="modal-content">
+              <div class="modal-content-center">
+                <h2 class="modal-title">Подледная ловля форели</h2><a class="modal-date" href="#">04.07.2017</a>
+                <p class="modal-text">Спешим сообщить. В преддверии тёплых выходных, запустили сразу в пруд, три тонны отборного сома, навеской от 1кг до 16кг!!! Готовьте куриную печень и берегите ваши снасти! Недавно выпущенный в количестве 4.5т карп, несмотря на неустойчивую погоду, клюёт по всему водоёму.</p>
+                <p class="modal-text">Также до выходных, ожидаем приход еще одной партии карпа!! Любителей покидать блесну, обрадует щука! В уловах, всё ещё попадаются не выловленные с зимы форель и сиг. А на селёдку, есть шанс поймать и осетра!</p>
+              </div>
+            </div>
+          </div><a class="modal-close-btn" href="#"></a>
+        </div>
+        <div class="modal" id="article2">
+          <div class="modal-wrapper">
+            <div class="modal-img"><img src="img/modal-bg.jpg" alt="Три карася"></div>
+            <div class="modal-content">
+              <div class="modal-content-center">
+                <h2 class="modal-title">Подледная ловля форели</h2><a class="modal-date" href="#">04.07.2017</a>
+                <p class="modal-text">Спешим сообщить. В преддверии тёплых выходных, запустили сразу в пруд, три тонны отборного сома, навеской от 1кг до 16кг!!! Готовьте куриную печень и берегите ваши снасти! Недавно выпущенный в количестве 4.5т карп, несмотря на неустойчивую погоду, клюёт по всему водоёму.</p>
+                <p class="modal-text">Также до выходных, ожидаем приход еще одной партии карпа!! Любителей покидать блесну, обрадует щука! В уловах, всё ещё попадаются не выловленные с зимы форель и сиг. А на селёдку, есть шанс поймать и осетра!</p>
+              </div>
+            </div>
+          </div><a class="modal-close-btn" href="#"></a>
+        </div>
+        <div class="modal" id="article3">
+          <div class="modal-wrapper">
+            <div class="modal-img"><img src="img/modal-bg.jpg" alt="Три карася"></div>
+            <div class="modal-content">
+              <div class="modal-content-center">
+                <h2 class="modal-title">Подледная ловля форели</h2><a class="modal-date" href="#">04.07.2017</a>
+                <p class="modal-text">Спешим сообщить. В преддверии тёплых выходных, запустили сразу в пруд, три тонны отборного сома, навеской от 1кг до 16кг!!! Готовьте куриную печень и берегите ваши снасти! Недавно выпущенный в количестве 4.5т карп, несмотря на неустойчивую погоду, клюёт по всему водоёму.</p>
+                <p class="modal-text">Также до выходных, ожидаем приход еще одной партии карпа!! Любителей покидать блесну, обрадует щука! В уловах, всё ещё попадаются не выловленные с зимы форель и сиг. А на селёдку, есть шанс поймать и осетра!</p>
+              </div>
+            </div>
+          </div><a class="modal-close-btn" href="#"></a>
+        </div>
+        <div class="carousel-wrapper">
+          <div class="container-fluid">
+            <div class="row">
+              <div class="col-md-12">
+                <div class="owl-carousel owl-theme fish-slider">
+                  <div class="carousel-slide"><img src="img/carousel-slide.jpg" alt="Клуб Три пескаря"></div>
+                  <div class="carousel-slide"><img src="img/carousel-slide.jpg" alt="Клуб Три пескаря"></div>
+                  <div class="carousel-slide"><img src="img/carousel-slide.jpg" alt="Клуб Три пескаря"></div>
                 </div>
               </div>
             </div>
