--- a/price.html
+++ b/price.html
@@ -36,126 +36,81 @@
             </div>
           </div>
         </div>
-        <div class="header-block">
-          <div class="container-fluid">
-            <div class="row">
-              <div class="col-lg-12">
-                <h1 class="header-block_h1">РЫБОЛОВНЫЙ КЛУБ <br> «ТРИ ПЕСКАРЯ» <br> В ЛЫТКИНО</h1>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="features-block">
-          <div class="container-fluid">
-            <div class="row">
-              <div class="col-lg-12"><span class="features-block__title">Пруд в Лыткино</span>
-                <div class="features-block__description">Каждая минута рыбалки в Лыткино стоит того: тишина предрассветных <br> часов, запахи утреннего леса, плеск весел и размеренное покачивание лодки, ожидание, <br> пропитанное умиротворением окружающей природы… И радость первого улова, <br> ни с чем не сравнимое ощущение того, что твои усилия <br>стократно окупились сторицей. Пруд в Лыткино - это:</div>
-              </div>
-              <div class="col-lg-4">
-                <div class="feature-item">
-                  <div class="feature-item__imgbox"><img src="img/f1.png"></div>
-                  <div class="feature-item__title"><span>Чистый воздух</span></div>
-                  <div class="feature-item__desc">В близости водоема отсутствуют сельскохозяйственные поля и фермы. В некотором удалении от водоема (200м) расположена опушка леса</div>
-                </div>
-              </div>
-              <div class="col-lg-4">
-                <div class="feature-item">
-                  <div class="feature-item__imgbox"><img src="img/f2.png"></div>
-                  <div class="feature-item__title"><span>Ключевая вода</span></div>
-                  <div class="feature-item__desc">В южной части водоема много ключей, что улучшает качество воды и положительно сказывается на здоровье и качестве рыбы</div>
-                </div>
-              </div>
-              <div class="col-lg-4">
-                <div class="feature-item">
-                  <div class="feature-item__imgbox"><img src="img/f3.png"></div>
-                  <div class="feature-item__title"><span>Удивительные пейзажи</span></div>
-                  <div class="feature-item__desc">Водоем находится в живописной сельской местности, удаленной от городов, заводов и других промышленных комбинатов</div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="we-offer">
-          <div class="container-fluid">
-            <div class="row">
-              <div class="col-lg-12"><span class="we-offer__title">МЫ ПРЕДЛАГАЕМ</span>
-                <div class="we-offer__description">Каждая минута рыбалки в Лыткино стоит того: тишина предрассветных <br> часов, запахи утреннего леса, плеск весел и размеренное покачивание лодки, ожидание, <br>ропитанное умиротворением окружающей природы… И радость первого улова, <br> ни с чем не сравнимое ощущение того, что твои усилия <br> стократно окупились сторицей. Пруд в Лыткино - это:</div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="home-service">
-          <div class="container-fluid">
-            <div class="row">
-              <div class="col-lg-3">
-                <div class="service-item">
-                  <div class="service-item__imgbox"><img src="img/hs1.png"></div>
-                  <div class="service-item__title">Рыбалка <br> и VIP рыбалка</div>
-                </div>
-              </div>
-              <div class="col-lg-3">
-                <div class="service-item">
-                  <div class="service-item__imgbox"><img src="img/hs2.png"></div>
-                  <div class="service-item__title">Финно- <br> угорское копчение</div>
-                </div>
-              </div>
-              <div class="col-lg-3">
-                <div class="service-item">
-                  <div class="service-item__imgbox"><img src="img/hs3.png"></div>
-                  <div class="service-item__title">Прокат <br> снастей</div>
-                </div>
-              </div>
-              <div class="col-lg-3">
-                <div class="service-item">
-                  <div class="service-item__imgbox"><img src="img/hs4.png"></div>
-                  <div class="service-item__title">Уютные <br> домики на берегу</div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="home-articles">
-          <div class="container-fluid">
-            <div class="row">
-              <div class="col-lg-3">
-                <div class="article-item">
-                  <div class="article-item__date">04.07.2017</div>
-                  <div class="article-item__title">Lorem ipsum dolor sit amet</div>
-                  <div class="article-item__desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud</div><a class="article-item__more" href="#">ЧИТАТЬ ПОЛНОСТЬЮ</a>
-                </div>
-              </div>
-              <div class="col-lg-3">
-                <div class="article-item">
-                  <div class="article-item__date">04.07.2017</div>
-                  <div class="article-item__title">Lorem ipsum dolor sit amet</div>
-                  <div class="article-item__desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud</div><a class="article-item__more" href="#">ЧИТАТЬ ПОЛНОСТЬЮ</a>
-                </div>
-              </div>
-              <div class="col-lg-3">
-                <div class="article-item">
-                  <div class="article-item__date">04.07.2017</div>
-                  <div class="article-item__title">Lorem ipsum dolor sit amet</div>
-                  <div class="article-item__desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud</div><a class="article-item__more" href="#">ЧИТАТЬ ПОЛНОСТЬЮ</a>
-                </div>
-              </div>
-              <div class="col-lg-3">
-                <div class="article-item">
-                  <div class="article-item__date">04.07.2017</div>
-                  <div class="article-item__title">Lorem ipsum dolor sit amet</div>
-                  <div class="article-item__desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud</div><a class="article-item__more" href="#">ЧИТАТЬ ПОЛНОСТЬЮ</a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="carousel-wrapper">
-          <div class="container-fluid">
-            <div class="row">
-              <div class="col-md-12">
-                <div class="owl-carousel owl-theme fish-slider">
-                  <div class="carousel-slide"><img src="img/carousel-slide.jpg" alt="Клуб Три пескаря"></div>
-                  <div class="carousel-slide"><img src="img/carousel-slide.jpg" alt="Клуб Три пескаря"></div>
-                  <div class="carousel-slide"><img src="img/carousel-slide.jpg" alt="Клуб Три пескаря"></div>
+        <div class="price">
+          <div class="price-content">
+            <div class="container-fluid">
+              <div class="row">
+                <div class="col-md-12">
+                  <div class="price-container">
+                    <div class="price-table">
+                      <table>
+                        <caption class="price-title">Рыбалка
+                          <tr class="price-row">
+                            <td class="price-cell price-table_name">Утренняя путёвка с 6-00 до 13-00 без лимита любой рыбы</td>
+                            <td class="price-cell price-table_price">1600 рублей</td>
+                          </tr>
+                          <tr class="price-row">
+                            <td class="price-cell price-table_name">Дневная путёвка с 6-00 до 20-00 без лимита любой рыбы</td>
+                            <td class="price-cell price-table_price">2000 рублей</td>
+                          </tr>
+                          <tr class="price-row">
+                            <td class="price-cell price-table_name">Вечерняя путёвка с 13-00 до 20-00 без лимита любой рыбы</td>
+                            <td class="price-cell price-table_price">1600 рублей</td>
+                          </tr>
+                          <tr class="price-row">
+                            <td class="price-cell price-table_name">Ночная путёвка с 20-30 до 5-00 без лимита любой рыбы</td>
+                            <td class="price-cell price-table_price">2000 рублей</td>
+                          </tr>
+                          <tr class="price-row">
+                            <td class="price-cell price-table_name">Суточная путевка сутки с момента прибытия</td>
+                            <td class="price-cell price-table_price">3500 рублей</td>
+                          </tr>
+                          <tr class="price-row">
+                            <td class="price-cell price-table_name">Путевка ВИП с 7:00 до 17:00 без нормы вылова</td>
+                            <td class="price-cell price-table_price">1000 рублей</td>
+                          </tr>
+                          <tr class="price-row">
+                            <td class="price-cell price-table_name">Гостевая путевка</td>
+                            <td class="price-cell price-table_price">500 рублей</td>
+                          </tr>
+                          <tr class="price-row">
+                            <td class="price-cell price-table_name">Беседка</td>
+                            <td class="price-cell price-table_price">1000 рублей</td>
+                          </tr>
+                          <tr class="price-row">
+                            <td class="price-cell price-table_name">Дополнительная снасть</td>
+                            <td class="price-cell price-table_price">300 рублей</td>
+                          </tr>
+                          <tr class="price-row">
+                            <td class="price-cell price-table_name">Пойманная рыба весом свыше 3кг</td>
+                            <td class="price-cell price-table_price">300 рублей</td>
+                          </tr>
+                        </caption>
+                      </table>
+                    </div>
+                    <div class="price-repair">
+                      <table>
+                        <caption class="price-title">Ремонт снастей
+                          <tr class="price-row">
+                            <td class="price-cell price-table_name">Удочка</td>
+                            <td class="price-cell price-table_price">400 рублей</td>
+                          </tr>
+                          <tr class="price-row">
+                            <td class="price-cell price-table_name">Подсачник</td>
+                            <td class="price-cell price-table_price">300 рублей</td>
+                          </tr>
+                          <tr class="price-row">
+                            <td class="price-cell price-table_name">Кресло</td>
+                            <td class="price-cell price-table_price">200 рублей</td>
+                          </tr>
+                          <tr class="price-row">
+                            <td class="price-cell price-table_name">Ремонт снастей</td>
+                            <td class="price-cell price-table_price">100 рублей</td>
+                          </tr>
+                        </caption>
+                      </table>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
