--- a/service.html
+++ b/service.html
@@ -360,7 +360,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
         <script src="libs/fancybox/jquery.fancybox.js"></script>
         <script src="libs/owl.carousel/owl.carousel.js"></script>
-        <script src="https://api-maps.yandex.ru/2.1/?lang=tr_TR" type="text/javascript"></script>
+        <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
         <script src="js/common.js"></script>
       </div>
     </div>
