service - переименовал класс current из-за конфликта

--- a/service.html
+++ b/service.html
@@ -155,12 +155,12 @@
             </div>
           </div>
         </div>
-        <div class="current">
+        <div class="current-state">
           <div class="container-fluid">
             <div class="row">
               <div class="col-md-12">
-                <h2 class="h2-title current-title h2-title__white">В настоящее время водоем зарыблен следующими видами рыбы</h2>
-                <p class="current-text">Карп, весом до 8кг, Сазан, весом до 15кг, Сом, весом до 16кг Щука, весом до 5кг, Окунь, весом до 500г, Форель, весом до 3кг Осётр, весом до 13кг, Сиг, весом до 2кг, Стерлядь, весом до 1кг Линь, весом до 1.2кг, много крупного карася</p>
+                <h2 class="h2-title current-state-title h2-title__white">В настоящее время водоем зарыблен следующими видами рыбы</h2>
+                <p class="current-state-text">Карп, весом до 8кг, Сазан, весом до 15кг, Сом, весом до 16кг Щука, весом до 5кг, Окунь, весом до 500г, Форель, весом до 3кг Осётр, весом до 13кг, Сиг, весом до 2кг, Стерлядь, весом до 1кг Линь, весом до 1.2кг, много крупного карася</p>
               </div>
             </div>
           </div>
