--- a/service.html
+++ b/service.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title></title>
+    <title>Услуги</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700,900" rel="stylesheet">
     <link rel="stylesheet" href="https://opensource.keycdn.com/fontawesome/4.7.0/font-awesome.min.css" integrity="sha384-dNpIIXE8U05kAbPhy3G1cz+yZmTzA6CY8Vg/u2L9xRnHjJiAK76m2BIEaSEV+/aU" crossorigin="anonymous">
     <link rel="shortcut icon" href="favicon.png">
@@ -191,7 +191,9 @@
         <div class="footer-top">
           <div class="container">
             <div class="row">
-              <div class="col-lg-12"><span>facebook</span></div>
+              <div class="col-lg-12">
+                <div class="soc-block"><a class="soc_facebook" href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a><a class="soc_youtube" href="#"><i class="fa fa-youtube-play" aria-hidden="true"></i></a></div>
+              </div>
             </div>
           </div>
         </div>
