--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title></title>
+    <title>Главная</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700,900" rel="stylesheet">
     <link rel="stylesheet" href="https://opensource.keycdn.com/fontawesome/4.7.0/font-awesome.min.css" integrity="sha384-dNpIIXE8U05kAbPhy3G1cz+yZmTzA6CY8Vg/u2L9xRnHjJiAK76m2BIEaSEV+/aU" crossorigin="anonymous">
     <link rel="shortcut icon" href="favicon.png">
@@ -33,6 +33,25 @@
                   <li><a href="#">Контакты</a></li>
                 </ul>
               </div>
+            </div>
+          </div>
+        </div>
+        <div class="mobile-menu-panel">
+          <input class="anz-mobile" type="checkbox" id="check_1">
+          <label class="anz-menu-ch anz-mobile" for="check_1">
+            <div id="nav-icon"><span></span><span></span><span></span><span></span></div>
+          </label>
+          <div class="anz-perspective">
+            <div class="menu-list-pressed">
+              <ul class="mobile-menu">
+                <li><a href="#">VIP рыбалка</a></li>
+                <li><a href="#">Услуги</a></li>
+                <li><a href="#">Цены</a></li>
+                <li><a href="#">Новости</a></li>
+                <li><a href="#">Статьи</a></li>
+                <li><a href="#">Фото</a></li>
+                <li><a href="#">Контакты</a></li>
+              </ul>
             </div>
           </div>
         </div>
@@ -166,7 +185,9 @@
         <div class="footer-top">
           <div class="container">
             <div class="row">
-              <div class="col-lg-12"><span>facebook</span></div>
+              <div class="col-lg-12">
+                <div class="soc-block"><a class="soc_facebook" href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a><a class="soc_youtube" href="#"><i class="fa fa-youtube-play" aria-hidden="true"></i></a></div>
+              </div>
             </div>
           </div>
         </div>
